--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,6 +1,33 @@
 @import (less) "../../node_modules/normalize.css/normalize.css";
 @import "global/fonts";
+
 body {
-  display: block;
-  color: black;
+  background: #333;
+}
+
+#video-background {
+  width: 100%;
+  z-index: -100;
+  min-width: 850px;
+  position: relative;
+  // pseudo elements to gradientize top and bottom
+  &:before {
+
+  }
+  &:after {
+
+  }
+}
+
+.site-background {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  justify-content: center;
+  align-items: center;
 }
