--- a/index.hbs
+++ b/index.hbs
@@ -2,34 +2,15 @@
 {{!-- The tag above means: insert everything in this file
 into the {body} of the default.hbs template --}}
 
-{{> header background=@site.cover_image}} {{!--Special header.hbs partial to generate the <header> tag--}}
-    <div class="inner">
-        <div class="site-header-content">
-            <h1 class="site-title">
-                {{#if @site.logo}}
-                    <img class="site-logo" src="{{img_url @site.logo size="l"}}" alt="{{@site.title}}" />
-                {{else}}
-                    {{@site.title}}
-                {{/if}}
-            </h1>
-            <h2 class="site-description">{{@site.description}}</h2>
-        </div>
-        {{> "site-nav"}}
-    </div>
-</header>
-
 {{!-- The main content area --}}
 <main id="site-main" class="site-main outer">
-    <div class="inner">
+  <div class="site-background">
+    <video autoplay loop id="video-background" muted plays-inline>
+      <source src="{{asset "highlight-reel-web.mp4"}}" type="video/mp4" />
+    </video>
+  </div>
 
-        <div class="post-feed">
-            {{#foreach posts}}
+  <div class="inner">
 
-                {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
-                {{> "post-card"}}
-
-            {{/foreach}}
-        </div>
-
-    </div>
+  </div>
 </main>
