--- a/src/styles/page/index.less
+++ b/src/styles/page/index.less
@@ -6,6 +6,7 @@
 body {
   background: @color-dark;
   color: @color-light;
+  background: url('../../assets/img/classy_fabric_@2x.png') center center repeat;
 }
 
 .site-wrapper {
