--- a/index.hbs
+++ b/index.hbs
@@ -10,7 +10,7 @@ into the {body} of the default.hbs template --}}
   </div>
 </main>
 
-{{> subscribers-form }}
+{{!-- {{> subscribers-form }} --}}
 
 <div class="site-background">
   <video autoplay loop id="video-background" muted plays-inline>
