--- a/src/styles/page/home.less
+++ b/src/styles/page/home.less
@@ -1,3 +1,13 @@
 .home-template {
+  .post-content {
+    background: none;
+    text-align: center;
+
+    & > *:not(.styled-header) {
+      background: rgba(0,0,0,0.5);
+      margin: 0 auto;
+      padding: 1rem;
+    }
+  }
 
 }
