--- a/src/styles/post/index.less
+++ b/src/styles/post/index.less
@@ -1,15 +1,13 @@
 @import 'card.less';
 
 .post-content {
-  display: flex;
   margin: 0 auto;
-  flex-direction: column;
-  align-items: center;
   background: rgba(0,0,0,0.5);
   max-width: 1200px;
-  overflow-x: visible;
-  & > * {
-    margin: 1rem 0;
-    display: block;
+
+  a:link,
+  a:visited {
+    color: @color-blue;
+    text-decoration: underline;
   }
 }
