--- a/post.hbs
+++ b/post.hbs
@@ -22,8 +22,10 @@ into the {body} of the default.hbs template --}}
     </figure>
     {{/if}}
   </div>
-{{/post}}
 
+  <h1>{{title}}</h1>
+
+{{/post}}
 {{> post-content }}
 
 {{> subscribers-form }}
