--- a/src/styles/global/index.less
+++ b/src/styles/global/index.less
@@ -2,3 +2,8 @@
 @import 'mixins.less';
 @import 'fonts.less';
 @import 'typography.less';
+
+* {
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent; /* for removing the highlight */
+}
