--- a/src/styles/global/typography.less
+++ b/src/styles/global/typography.less
@@ -1,7 +1,7 @@
 body {
-  font-family: 'Alegreya', serif;
+  font-family: 'PT Sans', serif;
   line-height: 1.2;
-  font-size: 120%;
+  font-size: 16px;
 }
 
 h1,
@@ -13,7 +13,8 @@ h4 {
 
 a:link,
 a:visited {
-  color: @color-blue;
+  color: @color-light;
+  text-decoration: none;
 }
 
 html:not(.wf-active) {
