--- a/src/styles/page/footer.less
+++ b/src/styles/page/footer.less
@@ -1,3 +1,26 @@
 .site-footer {
   z-index: 2;
+  padding: 0.5rem;
+  font-size: 0.9rem;
+
+  .site-footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .social-links {
+    display: flex;
+    a {
+      padding: 5px;
+      margin: 0 0.2rem;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+    svg {
+      height: 20px;
+      fill: @color-light;
+    }
+  }
 }
