--- a/src/styles/post/index.less
+++ b/src/styles/post/index.less
@@ -1,13 +1,8 @@
 @import 'card.less';
 
 .post-content {
-  margin: 0 auto;
-  background: rgba(0,0,0,0.5);
-  max-width: 1200px;
 
-  a:link,
-  a:visited {
-    color: @color-blue;
-    text-decoration: underline;
+  hr {
+    padding: 0;
   }
 }
