--- a/post.hbs
+++ b/post.hbs
@@ -2,33 +2,19 @@
 {{!-- The tag above means: insert everything in this file
 into the {body} of the default.hbs template --}}
 
+{{!-- The main content area --}}
 {{#post}}
-  <div class="site-background">
-    {{#if feature_image}}
-    <figure class="post-full-image">
-        {{!-- This is a responsive image, it loads different sizes depending on device
-        https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
-        <img
-            srcset="{{img_url feature_image size="s"}} 300w,
-                    {{img_url feature_image size="m"}} 600w,
-                    {{img_url feature_image size="l"}} 1000w,
-                    {{img_url feature_image size="xl"}} 2000w"
-            sizes="(max-width: 800px) 400px,
-                    (max-width: 1170px) 700px,
-                    1400px"
-            src="{{img_url feature_image size="xl"}}"
-            alt="{{title}}"
-        />
-    </figure>
-    {{/if}}
-  </div>
-
-  <h1>{{title}}</h1>
-
+  <main id="site-main" class="site-main outer">
+    <div class="post-title">
+      <h1>{{title}}</h1>
+    </div>
+    <div class="post-inner">
+      {{> post-content}}
+    </div>
+  </main>
 {{/post}}
-{{> post-content }}
 
-{{> subscribers-form }}
+{{> site-background}}
 
 {{!-- The #contentFor helper here will send everything inside it up to the matching #block helper found in default.hbs --}}
 {{#contentFor "scripts"}}
