--- a/src/styles/page/index.less
+++ b/src/styles/page/index.less
@@ -1,4 +1,5 @@
 @import 'header.less';
+@import 'main.less';
 @import 'background.less';
 @import 'footer.less';
 @import 'home.less';
@@ -25,8 +26,9 @@ body {
 .site-main {
   z-index: 1;
   flex-grow: 1;
-  .inner {
-    padding: 2rem 1rem;
+  margin: 1rem 0;
+  & > .inner {
+    padding: 1rem;
   }
 }
 
