finishing theme features

--- a/index.hbs
+++ b/index.hbs
@@ -15,7 +15,7 @@ into the {body} of the default.hbs template --}}
 {{!-- {{> subscribers-form }} --}}
 
 <div class="site-background">
-  <video autoplay loop id="video-background" muted plays-inline>
+  <video id="video-background" autoplay loop muted plays-inline>
     <source src="{{asset "highlight-reel-web.mp4"}}" type="video/mp4" />
   </video>
 </div>
