--- a/partials/social-links.hbs
+++ b/partials/social-links.hbs
@@ -2,5 +2,5 @@
   {{#if @site.facebook}}
       <a class="social-link-fb" href="{{facebook_url @site.facebook}}" title="Facebook" target="_blank">{{> icons/facebook}}</a>
   {{/if}}
-  <a class="social-link-insta" href="https://instagram.com/seamproject" title="Follow Seam Project on Instagram" target="_blank">{{> icons/instagram}}</a>
+  <a class="social-link-insta" href="https://instagram.com/seamproject" title="Follow Seam Project on Instagram">{{> icons/instagram}}</a>
 </nav>
