--- a/post.hbs
+++ b/post.hbs
@@ -5,10 +5,10 @@ into the {body} of the default.hbs template --}}
 {{!-- The main content area --}}
 {{#post}}
   <main id="site-main" class="site-main outer">
-    <div class="post-title">
+    <div class="title post-title">
       <h1>{{title}}</h1>
     </div>
-    <div class="post-inner">
+    <div class="inner post-inner">
       {{> post-content}}
     </div>
   </main>
