--- a/src/styles/global/fonts.less
+++ b/src/styles/global/fonts.less
@@ -2,8 +2,8 @@
 
 @font-face {
     font-family: 'Wigrum';
-    src: url('@{fonts-path}/wigrum_medium-webfont.woff2') format('woff2'),
-         url('@{fonts-path}/wigrum_medium-webfont.woff') format('woff');
+    src: url('@{fonts-path}/wigrum_regular-webfont.woff2') format('woff2'),
+         url('@{fonts-path}/wigrum_regular-webfont.woff') format('woff');
     font-weight: 400;
     font-style: normal;
 
@@ -11,8 +11,8 @@
 
 @font-face {
     font-family: 'Wigrum';
-    src: url('@{fonts-path}/wigrum_medium_italic-webfont.woff2') format('woff2'),
-         url('@{fonts-path}/wigrum_medium_italic-webfont.woff') format('woff');
+    src: url('@{fonts-path}/wigrum_italic-webfont.woff2') format('woff2'),
+         url('@{fonts-path}/wigrum_italic-webfont.woff') format('woff');
     font-weight: 400;
     font-style: italic;
 }
