--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -4,5 +4,6 @@
 @color-blue: #365D96;
 @color-turquoise: #58848B;
 @color-pale-turquoise: #007a7b;
+@color-background-dark: rgba(0,0,0,0.7);
 @color-pink: #d5acb4;
 @color-red: #ee3e35;
