--- a/src/styles/global/mixins.less
+++ b/src/styles/global/mixins.less
@@ -10,8 +10,8 @@
   };
 }
 
-.respond-to-min-width(@maxWidth; @rules){
-  @media only screen and (min-width: @maxWidth) {
+.respond-to-min-width(@minWidth; @rules){
+  @media only screen and (min-width: @minWidth) {
       @rules();
   };
 }
