--- a/src/styles/ui/index.less
+++ b/src/styles/ui/index.less
@@ -1,6 +1,6 @@
 .styled-header {
   background: none;
-  
+
   span {
     display: inline-block;
     padding: .25rem .5rem;
@@ -30,4 +30,44 @@
     }
   }
 
+}
+
+.site-main {
+  button,
+  .button {
+    &,
+    &:link,
+    &:visited {
+      padding: 1rem;
+      background: @color-blue;
+      color: @color-light;
+      text-decoration: none;
+      display: inline-block;
+      border-radius: 4px;
+      white-space: nowrap;
+      line-height: 1;
+      transition: opacity 0.1s ease-in-out;
+      border: none;
+      cursor: pointer;
+      &:hover {
+        opacity: 0.8;
+        color: inherit;
+      }
+      &.secondary {
+        background: @color-turquoise;
+      }
+      &.red {
+        background: @color-red;
+      }
+
+      &.small {
+        padding: 0.4rem;
+        line-height: 1;
+      }
+
+      &.inline {
+        margin: 0 0.2rem;
+      }
+    }
+  }
 }
