small style tweaks. adding prod files

--- a/src/styles/modal/index.less
+++ b/src/styles/modal/index.less
@@ -38,6 +38,17 @@
     background: @color-turquoise;// rgba(red(@color-blue), green(@color-blue), blue(@color-blue), 0.8);
     box-shadow: 0 0 8px rgba(0,0,0,.5);
   }
+  .modal-close {
+    position: absolute;
+    display: block;
+    top: 0;
+    right: 0;
+    padding: 0.5rem;
+    svg {
+      height: 20px;
+      width: 20px;
+    }
+  }
 }
 
 body.modal-open {
