--- a/src/styles/page/main.less
+++ b/src/styles/page/main.less
@@ -8,6 +8,7 @@
       padding: 0.5rem 1rem;
       background: rgba(red(@color-red), green(@color-red), blue(@color-red), 0.8);
       text-shadow: 0 -1px 1px rgba(0,0,0,0.8);
+      margin-bottom: 0.5rem;
     }
   }
 
