mobile fix for main padding

--- a/src/styles/page/main.less
+++ b/src/styles/page/main.less
@@ -17,6 +17,9 @@
     background: @color-background-dark;
     max-width: 1200px;
     padding: 1rem 2rem;
+    .respond-to-mobile-large({
+      padding: 1rem;
+    });
   }
 
   a:link,
