tag-based themes and background control. dynamic logo w/ fallback

--- a/partials/site-background.hbs
+++ b/partials/site-background.hbs
@@ -1,11 +1,17 @@
 {{#post}}
   <div class="site-background">
-    {{#if feature_image}}
-      <img class="feature-image" src="{{feature_image}}" />
+
+    {{#has tag="#no-bg"}}
+      {{!-- skipping background  --}}
     {{else}}
-      {{#if @site.cover_image}}
-        <img class="site-cover-image" src="{{@site.cover_image}}" />
+      {{#if feature_image}}
+        <img class="feature-image" src="{{feature_image}}" />
+      {{else}}
+        {{#if @site.cover_image}}
+          <img class="site-cover-image" src="{{@site.cover_image}}" />
+        {{/if}}
       {{/if}}
-    {{/if}}
+    {{/has}}
+
   </div>
 {{/post}}
