--- a/src/styles/page/header.less
+++ b/src/styles/page/header.less
@@ -19,8 +19,8 @@
       display: block;
       padding: 0.5rem;
       transition: background .1s ease-in-out;
-      width: 135px;
-      svg {
+      svg,
+      img {
         height: 45px;
         .respond-to-mobile-large({
           height: 35px;
