--- a/src/styles/page/index.less
+++ b/src/styles/page/index.less
@@ -3,6 +3,7 @@
 @import 'background.less';
 @import 'footer.less';
 @import 'home.less';
+@import 'themes.less';
 
 body {
   background: @color-dark;
