--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -1,6 +1,7 @@
 @color-dark: #000;
 @color-light: #fff;
 
+@color-gray-dark: #222;
 @color-blue: #365D96;
 @color-turquoise: #58848B;
 @color-pale-turquoise: #007a7b;
