--- a/src/styles/page/footer.less
+++ b/src/styles/page/footer.less
@@ -2,7 +2,7 @@
   z-index: 2;
   padding: 0.5rem;
   font-size: 0.8rem;
-  background: rgba(0,0,0,0.5);
+  background: @color-background-dark;
 
   .site-footer-content {
     display: flex;
