new logos. style changes for new new logos

--- a/src/styles/page/header.less
+++ b/src/styles/page/header.less
@@ -17,14 +17,14 @@
     }
     .top-nav-logo {
       display: block;
-      padding: 0.5rem;
+      padding: 0 0.5rem 0 0;
       transition: background .1s ease-in-out;
       svg,
       img {
-        height: 45px;
-        .respond-to-mobile-large({
-          height: 35px;
-        });
+        height: 52px;
+        // .respond-to-mobile-large({
+        //   height: 35px;
+        // });
       }
       &:hover {
         background: @color-turquoise;
