--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -7,4 +7,8 @@
 @color-pale-turquoise: #007a7b;
 @color-background-dark: rgba(0,0,0,0.7);
 @color-pink: #d5acb4;
-@color-red: #ee3e35;
+@color-red: #e42e19;
+@color-orange: #fb9c37;
+@color-yellow: #ffdd6f;
+@color-purple: #661564;
+@color-purple-dark: #3B0839;
