--- a/src/styles/modal/index.less
+++ b/src/styles/modal/index.less
@@ -35,7 +35,7 @@
     padding: 2rem;
     width: 685px;
     max-width: 90%;
-    background: @color-turquoise;// rgba(red(@color-blue), green(@color-blue), blue(@color-blue), 0.8);
+    background: @color-purple;// rgba(red(@color-blue), green(@color-blue), blue(@color-blue), 0.8);
     box-shadow: 0 0 8px rgba(0,0,0,.5);
   }
   .modal-close {
