--- a/src/styles/page/themes.less
+++ b/src/styles/page/themes.less
@@ -2,7 +2,7 @@
   .site-background {
     img, video {
       display: none;
-    }    
+    }
   }
 }
 
@@ -35,7 +35,7 @@
 .tag-hash-bg-red {
   .no-bg();
   .post-title > h1 {
-    background: black;
+    background: @color-blue;
   }
   .site-background {
     background: @color-red;
@@ -55,6 +55,45 @@
     background: @color-blue;
   }
 }
+
+.tag-hash-bg-orange {
+  .no-bg();
+  .site-background {
+    background: @color-orange;
+  }
+}
+
+.tag-hash-bg-yellow {
+  .no-bg();
+  .site-background {
+    background: @color-yellow;
+  }
+}
+
+.tag-hash-bg-purple {
+  .no-bg();
+  .site-background {
+    background: @color-purple;
+  }
+}
+
+.tag-hash-bg-purple-dark {
+  .no-bg();
+  .site-background {
+    background: @color-purple-dark;
+  }
+}
+
+.tag-past-shows {
+  .no-bg();
+  .title > h1 {
+    background: @color-blue;
+  }
+  .site-background {
+    background: @color-orange;
+  }
+}
+
 
 // themes
 .tag-hash-theme-red {
