new past show page. gallery. other stuff

--- a/partials/site-background.hbs
+++ b/partials/site-background.hbs
@@ -7,9 +7,9 @@
       {{#if feature_image}}
         <img class="feature-image" src="{{feature_image}}" />
       {{else}}
-        {{#if @site.cover_image}}
+        {{!-- {{#if @site.cover_image}}
           <img class="site-cover-image" src="{{@site.cover_image}}" />
-        {{/if}}
+        {{/if}} --}}
       {{/if}}
     {{/has}}
 
