--- a/src/styles/page/index.less
+++ b/src/styles/page/index.less
@@ -5,6 +5,8 @@
 @import 'home.less';
 @import 'themes.less';
 
+@import 'past-shows.less';
+
 body {
   background: @color-dark;
   color: @color-light;
