--- a/src/styles/page/themes.less
+++ b/src/styles/page/themes.less
@@ -84,15 +84,15 @@
   }
 }
 
-.tag-past-shows {
-  .no-bg();
-  .title > h1 {
-    background: @color-blue;
-  }
-  .site-background {
-    background: @color-orange;
-  }
-}
+// .tag-past-shows {
+//   .no-bg();
+//   .title > h1 {
+//     background: @color-blue;
+//   }
+//   .site-background {
+//     background: @color-orange;
+//   }
+// }
 
 
 // themes
