--- a/src/styles/ui/index.less
+++ b/src/styles/ui/index.less
@@ -71,3 +71,22 @@
     }
   }
 }
+
+// mailchimp form
+#mc_embed_signup input[type=email],
+#mc_embed_signup input[type=text] {
+  appearance: none;
+  --webkit-appearance: none;
+  border: 0;
+  display: block;
+  width: 100%;
+  max-width: 500px;
+  padding: 1rem 0.5rem;
+  outline: 0;
+  line-height: 1.4;
+}
+
+#mc_embed_signup .button,
+#mc_embed_signup button {
+  margin: 1rem 0 0;
+}
