--- a/src/styles/page/background.less
+++ b/src/styles/page/background.less
@@ -10,6 +10,8 @@
   bottom: 0;
   justify-content: center;
   align-items: center;
+  
+  background: @color-gray-dark;
 
   & ~ * {
     z-index: 1;
